--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ YOUR_GOOGLE_CLIENT_SECRET.json
 client_secret.json
 venv/
 .venv/
+client_secret_676049222922-sv4mvi09ibf0l1r7qnmhahq6smutsab6.apps.googleusercontent.com.json
