--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-pycache/
-*.pyc
 .env
-YOUR_GOOGLE_CLIENT_SECRET.json
 client_secret.json
-venv/
-.venv/
-client_secret_676049222922-sv4mvi09ibf0l1r7qnmhahq6smutsab6.apps.googleusercontent.com.json
+node_modules
