--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "geo-tz": "^8.1.4",
     "googleapis": "^167.0.0",
     "moment-timezone": "^0.6.0",
     "mongoose": "^9.0.1",
